--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
 <div class="box">
-  <img src="Wall5.jpg" alt="" class="box-img">
-  <h1>
-DarkCode</h1>
+  <img src="pf.jpg" alt="" class="box-img">
+  <h1>Oliver Huang</h1>
 <h5>
 Web Devloper - Web Designer</h5>
 <p>
