--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <div class="box">
   <img src="pf.jpg" alt="" class="box-img">
   <h1>Oliver Huang</h1>
-<h5>
-Web Devloper - Web Designer</h5>
+<h5>2nd Year Student - University of Toronto</h5>
 <p>
-A web developer is a programmer who specializes in, or is specifically engaged in, the development of World Wide Web applications, or applications that are run over HTTP from a web server to a web browser.</p>
+Energetic programmer who is looking to apply advanced abilities mainly in computer science and related education to take on a dynamic role 
+  with potential to make real-work contributions while further developing acquired academic and communications skills.</p>
 <ul>
-<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-<li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+<li><a href="https://www.facebook.com/profile.php?id=100009553142409&viewas=100000686899395"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+<li><a href="https://www.linkedin.com/in/haoze-huang-2398661aa/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
 <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
 </ul>
 </div>
