--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 
 .header {
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: #c23c3c;
   padding: 20px 10px;
 }
 
@@ -66,10 +66,10 @@ body {
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">CompanyLogo</a>
+  <a href="#default" class="logo">Welcome to my site</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
+    <a href="#awards">Awards</a>
     <a href="#about">About</a>
   </div>
 </div>
