--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ body {
 <div class="header">
   <a href="#default" class="logo">Welcome to my site</a>
   <div class="header-right">
-    <a class="active" href="#home">Home</a>
-    <a href="#about">About</a>
+    <a class="active" href="#index.html">Home</a>
+    <a href="#about.html">About</a>
     <a href="#awards">Awards</a>
   </div>
 </div>
