--- a/about.html
+++ b/about.html
@@ -68,9 +68,9 @@ body {
 <div class="header">
   <a href="#default" class="logo">Welcome to my site</a>
   <div class="header-right">
-    <a href="#index.html">Home</a>
-    <a class="active" href="#about.html">About</a>
-    <a href="#awards">Awards</a>
+    <a href="index.html">Home</a>
+    <a class="active" href="about.html">About</a>
+    <a href="awards.html">Awards</a>
   </div>
 </div>
   <body>
