--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body {
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">Welcome to my site</a>
+  <a href="#default" class="logo">Oliver Huang</a>
   <div class="header-right">
     <a class="active" href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -76,7 +76,7 @@ body {
   <body>
 <div class="box">
   <img src="pf.jpg" alt="" class="box-img">
-  <h1>Oliver Huang</h1>
+  <h1>Haoze Huang</h1>
 <h5>Student - University of Toronto</h5>
 <p>
 Energetic programmer who is looking to apply advanced abilities mainly in computer science and related education to take on a dynamic role 
