--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@ body {
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">Welcome to my site</a>
+  <a href="#default" class="logo">Oliver Huang</a>
   <div class="header-right">
     <a href="index.html">Home</a>
     <a class="active" href="about.html">About</a>
@@ -75,12 +75,15 @@ body {
 </div>
   <body>
 <div class="box">
-  <img src="pf.jpg" alt="" class="box-img">
-  <h1>Oliver Huang</h1>
-<h5>Student - University of Toronto</h5>
-<p>
-Energetic programmer who is looking to apply advanced abilities mainly in computer science and related education to take on a dynamic role 
-  with potential to make real-work contributions while further developing acquired academic and communications skills.</p>
+  <h2>Education</h2>
+<h5>Bachelor of Science</h5>
+   <img src="about1.jpg" alt="" class="box-img">
+<ul>
+  <li>Specialized in <b>Computer Science<\b></li>
+  <li>Major in <b>Statiscial Science<\b></li>
+  <li><b>Dean's List<\b> 2019F - 2020S</li>
+  <li><b>3.87<\b> Cumulative GPA</li>
+</ul>  
 
 </div>
 </body>
