--- a/about.html
+++ b/about.html
@@ -79,10 +79,10 @@ body {
 <h5>Bachelor of Science</h5>
    <img src="about1.jpg" alt="" class="box-img">
 <ul>
-  <li>Specialized in <b>Computer Science<\b></li>
-  <li>Major in <b>Statiscial Science<\b></li>
-  <li><b>Dean's List<\b> 2019F - 2020S</li>
-  <li><b>3.87<\b> Cumulative GPA</li>
+  <li>Specialized in <strong>Computer Science<\strong></li>
+  <li>Major in <strong>Statiscial Science</strong></li>
+  <li><strong>Dean's List<\strong> 2019F - 2020S</li>
+  <li><strong>3.87<\strong> Cumulative GPA</li>
 </ul>  
 
 </div>
