--- a/about.html
+++ b/about.html
@@ -77,12 +77,12 @@ body {
 <div class="box">
   <h2>Education</h2>
 <h5>Bachelor of Science</h5>
-   <img src="about1.jpg" alt="" class="box-img">
+   <img src="about1.jpg" alt="" class="box-img" style="width:400px;height:400px;">
 <ul>
-  <li>Specialized in <strong>Computer Science<\strong></li>
-  <li>Major in <strong>Statiscial Science</strong></li>
-  <li><strong>Dean's List<\strong> 2019F - 2020S</li>
-  <li><strong>3.87<\strong> Cumulative GPA</li>
+  <li>Specialized in Computer Science</li>
+  <li>Major in Statiscial Science</li>
+  <li>Dean's List 2019F - 2020S</li>
+  <li>3.87 Cumulative GPA</li>
 </ul>  
 
 </div>
