--- a/about.html
+++ b/about.html
@@ -86,5 +86,36 @@ body {
 </ul>  
 
 </div>
+    
+<div class="box">
+  <h2>Working Expeience</h2>
+<ol>
+  <li> <h5>Mathematic TA - Top Olympiads Center</h5> <ul>
+    <li>Prepared textbook for high school level mathematics</li>
+    <li>Developed challenging problems and their solutions as learning materials.</li>
+    <li>Developed concepts and learning objectives for students</li>
+  </ul> </li>
+  
+  <li> <h5>Mathematic TA - Run Ze Education</h5> <ul>
+    <li>Prepared all necessary paperwork (homework and tests) for classroom learning objectives
+for high school math and physics.</li>
+    <li>Self-developed questions and solutions for relevant course materials for instructors</li>
+    <li>Assisted instructors with material generation and lesson plan development.</li>
+  </ul> </li>
+  
+  <li> <h5>Mathematic TA - Run Ze Education</h5> <ul>
+    <li>Prepared all necessary paperwork (homework and tests) for classroom learning objectives
+for high school math and physics.</li>
+    <li>Self-developed questions and solutions for relevant course materials for instructors</li>
+    <li>Assisted instructors with material generation and lesson plan development.</li>
+  </ul> </li>
+  
+  <li> <h5>Staff Worker - Amer Mount</h5> <ul>
+    <li>Responsibilities include organize materials and put parts together.</li>
+    <li>Collaborated with other workers to package up wall mounts and record products in
+transactions sheets.</li>
+  </ul> </li>
+</ol>
+</div>
 </body>
 </html>
