--- a/interests.html
+++ b/interests.html
@@ -2,6 +2,62 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+* {box-sizing: border-box;}
+
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #f2a7a7;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
+}
+
 <style>
 * {
   box-sizing: border-box;
@@ -59,6 +115,16 @@ body {
 </head>
 <body>
 
+
+<div class="header">
+  <a href="#default" class="logo">Oliver Huang</a>
+  <div class="header-right">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="awards.html">Awards</a>
+    <a class="active" href="interests.html">Interests</a>
+  </div>
+</div>
 <!-- Header -->
 <div class="header" id="myHeader">
   <h1>Image Grid</h1>
