--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ body {
     <a class="active" href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="awards.html">Awards</a>
+    <a href="interests.html">Interests</a>
   </div>
 </div>
   <body>
