--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="aboutstyle.css">
     <title>Personal WebSite</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
