--- a/about.html
+++ b/about.html
@@ -64,7 +64,9 @@ body {
 </style>
 </head>
 <body>
-
+<aside>
+  <p>The Rough-skinned Newt defends itself with a deadly neurotoxin.</p>
+</aside>  
 <div class="header">
   <a href="#default" class="logo">Oliver Huang</a>
   <div class="header-right">
