--- a/about.html
+++ b/about.html
@@ -49,7 +49,20 @@ body {
 .header-right {
   float: right;
 }
+  
+aside {
+    width: 40%;
+    padding-left: .5rem;
+    margin-left: .5rem;
+    float: right;
+    box-shadow: inset 5px 0 5px -5px #29627e;
+    font-style: italic;
+    color: #29627e;
+}
 
+aside > p {
+    margin: .5rem;
+}
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
