--- a/about.html
+++ b/about.html
@@ -94,6 +94,7 @@ aside > p {
   <h2>Education</h2>
 <h5>Bachelor of Science</h5>
    <img src="about1.jpg" alt="" class="box-img">
+   <img src="about2.jpg" alt="" class="box-img">
 <ul>
   <li>Specialized in Computer Science</li>
   <li>Major in Statiscial Science</li>
