--- a/about.html
+++ b/about.html
@@ -50,19 +50,6 @@ body {
   float: right;
 }
   
-aside {
-    width: 40%;
-    padding-left: .5rem;
-    margin-left: .5rem;
-    float: right;
-    box-shadow: inset 5px 0 5px -5px #29627e;
-    font-style: italic;
-    color: #29627e;
-}
-
-aside > p {
-    margin: .5rem;
-}
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
@@ -77,9 +64,6 @@ aside > p {
 </style>
 </head>
 <body>
-<aside>
-  <p>The Rough-skinned Newt defends itself with a deadly neurotoxin.</p>
-</aside>  
 <div class="header">
   <a href="#default" class="logo">Oliver Huang</a>
   <div class="header-right">
@@ -95,6 +79,7 @@ aside > p {
 <h5>Bachelor of Science</h5>
    <img src="about1.jpg" alt="" class="box-img">
    <img src="about2.jpg" alt="" class="box-img">
+   <img src="about3.jpg" alt="" class="box-img">
 <ul>
   <li>Specialized in Computer Science</li>
   <li>Major in Statiscial Science</li>
