--- a/interests.html
+++ b/interests.html
@@ -137,38 +137,30 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
+    <img src="interest/1.jpg" style="width:100%">
+    <img src="interest/2.jpg" style="width:100%">
+    <img src="interest/3.jpg" style="width:100%">
+    <img src="interest/4.jpg" style="width:100%">
+
   </div>
   <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
+    <img src="interest/11.jpg" style="width:100%">
+    <img src="interest/12.jpg" style="width:100%">
+    <img src="interest/13.jpg" style="width:100%">
+    <img src="interest/6.jpg" style="width:100%">
   </div>  
   <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
+   <img src="interest/5.jpg" style="width:100%">
+    <img src="interest/6.jpg" style="width:100%">
+    <img src="interest/7.jpg" style="width:100%">
+    <img src="interest/8.jpg" style="width:100%">
+    <img src="interest/9.jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
+    <img src="interest/10.jpg" style="width:100%">
+    <img src="interest/1.jpg" style="width:100%">
+    <img src="interest/4.jpg" style="width:100%">
+    <img src="interest/12.jpg" style="width:100%">
   </div>
 </div>
 
