--- a/interests.html
+++ b/interests.html
@@ -127,8 +127,8 @@ body {
 </div>
 <!-- Header -->
 <div class="header" id="myHeader">
-  <h1>Image Grid</h1>
-  <p>Click on the buttons to change the grid view.</p>
+  <h1>Lego Collection</h1>
+  <p>Last updated 2021-01-06</p>
   <button class="btn" onclick="one()">1</button>
   <button class="btn active" onclick="two()">2</button>
   <button class="btn" onclick="four()">4</button>
@@ -138,29 +138,29 @@ body {
 <div class="row"> 
   <div class="column">
     <img src="interest/1.jpg" style="width:100%">
-    <img src="interest/2.jpg" style="width:100%">
-    <img src="interest/3.jpg" style="width:100%">
-    <img src="interest/4.jpg" style="width:100%">
+    <img src="interest/2.JPG" style="width:100%">
+    <img src="interest/3.HEIC" style="width:100%">
+    <img src="interest/4.HEIC" style="width:100%">
 
   </div>
   <div class="column">
-    <img src="interest/11.jpg" style="width:100%">
-    <img src="interest/12.jpg" style="width:100%">
-    <img src="interest/13.jpg" style="width:100%">
-    <img src="interest/6.jpg" style="width:100%">
+    <img src="interest/11.HEIC" style="width:100%">
+    <img src="interest/12.HEIC" style="width:100%">
+    <img src="interest/13.HEIC" style="width:100%">
+    <img src="interest/6.PNG" style="width:100%">
   </div>  
   <div class="column">
-   <img src="interest/5.jpg" style="width:100%">
-    <img src="interest/6.jpg" style="width:100%">
-    <img src="interest/7.jpg" style="width:100%">
-    <img src="interest/8.jpg" style="width:100%">
-    <img src="interest/9.jpg" style="width:100%">
+   <img src="interest/5.JPG" style="width:100%">
+    <img src="interest/6.PNG" style="width:100%">
+    <img src="interest/7.HEIC" style="width:100%">
+    <img src="interest/8.HEIC" style="width:100%">
+    <img src="interest/9.HEIC" style="width:100%">
   </div>
   <div class="column">
-    <img src="interest/10.jpg" style="width:100%">
+    <img src="interest/10.HEIC" style="width:100%">
     <img src="interest/1.jpg" style="width:100%">
-    <img src="interest/4.jpg" style="width:100%">
-    <img src="interest/12.jpg" style="width:100%">
+    <img src="interest/4.HEIC" style="width:100%">
+    <img src="interest/2.JPG" style="width:100%">
   </div>
 </div>
 
