--- a/interests.html
+++ b/interests.html
@@ -137,30 +137,33 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="interest/1.jpg" style="width:100%">
-    <img src="interest/2.JPG" style="width:100%">
-    <img src="interest/3.HEIC" style="width:100%">
-    <img src="interest/4.HEIC" style="width:100%">
+    <img src="interest/collection/1.jpg" style="width:100%">
+    <img src="interest/collection/2.jpg" style="width:100%">
+    <img src="interest/collection/3.jpeg" style="width:100%">
+    <img src="interest/collection/4.jpg" style="width:100%">
+    <img src="interest/collection/5.JPG" style="width:100%">
 
   </div>
   <div class="column">
-    <img src="interest/11.HEIC" style="width:100%">
-    <img src="interest/12.HEIC" style="width:100%">
-    <img src="interest/13.HEIC" style="width:100%">
-    <img src="interest/6.PNG" style="width:100%">
+    <img src="interest/collection/6.PNG" style="width:100%">
+    <img src="interest/collection/7.jpg" style="width:100%">
+    <img src="interest/collection/8.jpg" style="width:100%">
+    <img src="interest/collection/9.jpg" style="width:100%">
+    <img src="interest/collection/10.jpg" style="width:100%">
   </div>  
   <div class="column">
-   <img src="interest/5.JPG" style="width:100%">
-    <img src="interest/6.PNG" style="width:100%">
-    <img src="interest/7.HEIC" style="width:100%">
-    <img src="interest/8.HEIC" style="width:100%">
-    <img src="interest/9.HEIC" style="width:100%">
+   <img src="interest/collection/11.jpg" style="width:100%">
+    <img src="interest/collection/12.jpg" style="width:100%">
+    <img src="interest/collection/13.jpg" style="width:100%">
+    <img src="interest/collection/14.jpeg" style="width:100%">
+    <img src="interest/collection/15.jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="interest/10.HEIC" style="width:100%">
-    <img src="interest/1.jpg" style="width:100%">
-    <img src="interest/4.HEIC" style="width:100%">
-    <img src="interest/2.JPG" style="width:100%">
+    <img src="interest/collection/16.jpeg" style="width:100%">
+    <img src="interest/collection/17.jpeg" style="width:100%">
+    <img src="interest/collection/18.jpeg" style="width:100%">
+    <img src="interest/collection/14.jpeg" style="width:100%">
+    <img src="interest/collection/4.jpg" style="width:100%">
   </div>
 </div>
 
