--- a/about.html
+++ b/about.html
@@ -112,5 +112,10 @@ transactions sheets.</li>
   </ul> </li>
 </ol>
 </div>
+<div>
+   <h2>My Resume</h2>
+    <iframe src="interest/resume.pdf" width="100%" height="500px">
+    </iframe>
+</div>
 </body>
 </html>
