--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@ transactions sheets.</li>
   </ul> </li>
 </ol>
 </div>
-<div>
+<div class="box">
    <h2>My Resume</h2>
     <iframe src="interest/resume.pdf" width="100%" height="500px">
     </iframe>
