--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@ body {
 </head>
 <body>
 <div class="header">
-  <a href="#default" class="logo">Oliver Huang</a>
+  <a href="index.html" class="logo">Oliver Huang</a>
   <div class="header-right">
     <a href="index.html">Home</a>
     <a class="active" href="about.html">About</a>
