--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body {
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">Oliver Huang</a>
+  <a href="index.html" class="logo">Oliver Huang</a>
   <div class="header-right">
     <a class="active" href="index.html">Home</a>
     <a href="about.html">About</a>
