--- a/interests.html
+++ b/interests.html
@@ -74,16 +74,16 @@ body {
 }
 
 .row {
-  display: -ms-flexbox; /* IE 10 */
+  display: -ms-flexbox; 
   display: flex;
-  -ms-flex-wrap: wrap; /* IE 10 */
+  -ms-flex-wrap: wrap; 
   flex-wrap: wrap;
   padding: 0 4px;
 }
 
 /* Create two equal columns that sits next to each other */
 .column {
-  -ms-flex: 50%; /* IE 10 */
+  -ms-flex: 50%;
   flex: 50%;
   padding: 0 4px;
 }
@@ -93,12 +93,11 @@ body {
   vertical-align: middle;
 }
 
-/* Style the buttons */
 .btn {
   border: none;
   outline: none;
   padding: 10px 16px;
-  background-color: #f1f1f1;
+  background-color: #f2a7a7;
   cursor: pointer;
   font-size: 18px;
 }
@@ -117,7 +116,7 @@ body {
 
 
 <div class="header">
-  <a href="#default" class="logo">Oliver Huang</a>
+  <a href="index.html" class="logo">Oliver Huang</a>
   <div class="header-right">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
