--- a/interests.html
+++ b/interests.html
@@ -97,7 +97,7 @@ body {
   border: none;
   outline: none;
   padding: 10px 16px;
-  background-color: #f2a7a7;
+  background-color: #eb7575;
   cursor: pointer;
   font-size: 18px;
 }
