--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="#courses" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Courses</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li class="dropdown"><a class="nav-link scrollto" href="#"><span>More About Me</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="collection.html">Lego Collection</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
+
+      
     </div>
   </header>
 
@@ -91,7 +98,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://oliphant0803.github.io/Oliver-Huang/index.html</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Languages:</strong> <span>Mandarin (fluent), English (fluent), German (novice)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Interests:</strong> <span>Lego, Chess, Puzzle</span></li>
                 </ul>
@@ -243,7 +250,7 @@
             <div class="resume-item">
               <h4>Mathematics Teaching Assistant - Summer Intern</h4>
               <h5>2018-05 – 2020-09</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>Top Olympiads Center </em></p>
               <ul>
                 <li>Developed 4 textbooks for high school level mathematics by
                   constructing learning objectives, challenging problems, and
@@ -305,7 +312,7 @@
         </div>
 
       </div>
-    </section><!-- End Resume Section -->
+    </section>
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
