--- a/collection.html
+++ b/collection.html
@@ -50,8 +50,7 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Projects</h2>
-        <p>Personal Projects</p>
+        <h2>My Lego Collections</h2>
       </div>
 
       <div class="row" data-aos="fade-up">
