--- a/collection.html
+++ b/collection.html
@@ -17,7 +17,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="styles/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -272,7 +272,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
