--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="styles/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
         <h1 class="text-light"><a href="index.html">Haoze Huang</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/oliphant0803" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/haoze-huang-2398661aa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/oliver-huang-2398661aa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100009553142409" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/oli.huang/" class="instagram"><i class="bx bxl-instagram"></i></a>
         </div>
@@ -45,8 +45,9 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="#courses" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Courses</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-          <li class="dropdown"><a class="nav-link scrollto" href="#"><span>More About Me</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a class="nav-link scrollto" href="#"><span>Blogs and more</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
+              <li><a href="blog.html">Blog</a></li>
               <li><a href="collection.html">Lego Collection</a></li>
             </ul>
           </li>
@@ -98,7 +99,6 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://oliphant0803.github.io/Oliver-Huang/index.html</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Languages:</strong> <span>Mandarin (fluent), English (fluent), German (novice)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Interests:</strong> <span>Lego, Chess, Puzzle</span></li>
                 </ul>
@@ -130,7 +130,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Programming Languages</h2>
+          <h2>Tech Stacks</h2>
         </div>
 
         <div class="row skills-content">
@@ -214,7 +214,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Bash Script <i class="val">Since 2021</i></span>
+              <span class="skill">Bash<i class="val">Since 2021</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -479,6 +479,16 @@
               <div class="portfolio-links">
                 <a href="https://github.com/oliphant0803/covid-calculator" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Python Web App"><i class="bx bx-plus"></i></a>
                 <a href="https://github.com/oliphant0803/covid-calculator" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/projects/project8.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/projects/301FP.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Python Web App"><i class="bx bx-plus"></i></a>
+                <a href="" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -791,7 +801,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
