--- a/index.html
+++ b/index.html
@@ -493,6 +493,26 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/projects/project10.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://github.com/oliphant0803/moba_tracker" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Python Web App"><i class="bx bx-plus"></i></a>
+                <a href="" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/projects/project9.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://github.com/oliphant0803/res_tracker.js" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Python Web App"><i class="bx bx-plus"></i></a>
+                <a href="" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
