--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>This is Oliver</h1>
       <h1>A.K.A:  H2O</h1>
-      <p>I'm a <span class="typed" data-typed-items="Student, Developer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Student, Researcher, Developer"></span></p>
     </div>
   </section>
 
