--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
       <h1>Oliver Huang</h1>
       <!-- <h1>A.K.A:  H2O</h1> -->
       <p>I'm a <span class="typed" data-typed-items="Student, Researcher, Developer"></span></p>
+
+      <!-- <h3>News:</h3>
+      <p>I am starting my master of computer science this upcoming fall!</p> -->
     </div>
+
   </section>
 
   <main id="main">
@@ -139,30 +143,22 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Research</h3>
             <div class="resume-item">
-              <h4>Full Stack Developer</h4>
-              <h5>2021-05 - 2021-09</h5>
-              <p><em>Fortran Traffic System Limited</em></p>
+              <h4>Designing Personalized scalable Interactive Data Visualizations for
+                Enhanced Learning and Reflection.</h4>
+              <h5>2024 - Present</h5>
+              <p><em>DGP Lab (Carolina Nobre)</em></p>
               <ul>
-                <li>Built and maintained 20+ webpages in 4 months using web-based front-end application framework and web-based UI programmings.
-                  Designed and implemented 8 database schemas that are capable of dynamically store traffic network configurations.
-                  </li>
-                <li>Designed and implemented 8 database schemas that are capable of dynamically store traffic network configurations.
-                  </li>
-                <li>Developed back-end applications for traffic simulation as part of high-performance and sustainable V2X and ITS systems.</li>
+                <li>Developing scalable, intelligent, and personalized learning experiences for LLM-based computing education. Focusing on the intersection of HCI, AI, and Data Visualization
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Web Developer - Remote</h4>
-              <h5>2021-01 - Present</h5>
-              <p><em>Freelance as a team of 12 </em></p>
+              <h4>Exploring the Design Space of Reflection Techniques that Mitigate
+                the Illusion of Learning AI-Generated Code.</h4>
+              <h5>2023 - Present</h5>
+              <p><em>DGP Lab (Tovi Grossman)</em></p>
               <ul>
-                <li>Developed front-end features for 5 responsive webpages by
-                  working in a team of 12 to code navbar, animation, and other
-                  features by using Bootstrap.</li>
-                <li>Built 5 personalized eCommerce webpages in 2 months with
-                  designs, contents, and functionalities by using HTML, CSS, and
-                  JavaScript.
-                  </li>
+                <li>Developed scalable and personalized LLM-powered programming tools, employing different representation
+                  techniques. Aimed at maximizing learning gains and optimizing the educational experience.</li>
               </ul>
             </div>
           </div>
